[package]
name = "food-rs"
version = "0.1.0"
authors = ["猫尾黑夜 <THE_cattail@k-neco.moe>"]
edition = "2021"
description = "Public library for Cattail Magic Lab"
readme = "README.md"
repository = "https://github.com/THE-cattail/food-rs"
license = "MIT"
keywords = ["utilities"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
console = "0.15"
indicatif = "0.17"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
